Persistent Data ignores light objects property changes #87535

Closed
opened 2021-04-15 21:30:59 +02:00 by Juan José Peña · 6 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce 920MX/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.72

Blender Version
Broken: version: 2.93.0 Beta, branch: master, commit date: 2021-04-15 14:16, hash: a4877f9e54

Caused by 9676a1f61e

Short description of error
With Persistent Data Activated changing the light of any light object (Point, Sun, Spot, Area, even emission materials and world light) does not update in the render automatically. Tweaking some settings or deactivate and activate persistent data perform the update in light objects.

Exact steps for others to reproduce the error

  • In Cycles, activate persistent data.
  • Create a simple scene with a light object.
  • Set the light strength to 0. (alternatively: greater than 1)
  • Hit Render in a free slot.
  • Update the light strength to 1 or grater. (alternatively: 0)
  • Hit Render in another slot.
  • Compare. The light will not update.

[Based on an attached .blend file]
Persistent Data Object Light Bug.blend

Thanks!

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce 920MX/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.72 **Blender Version** Broken: version: 2.93.0 Beta, branch: master, commit date: 2021-04-15 14:16, hash: `a4877f9e54` Caused by 9676a1f61e **Short description of error** With Persistent Data Activated changing the light of any light object (Point, Sun, Spot, Area, even emission materials and world light) does not update in the render **automatically**. Tweaking some settings or deactivate and activate persistent data perform the update in light objects. **Exact steps for others to reproduce the error** - In Cycles, activate persistent data. - Create a simple scene with a light object. - Set the light strength to 0. (alternatively: greater than 1) - Hit Render in a free slot. - Update the light strength to 1 or grater. (alternatively: 0) - Hit Render in another slot. - Compare. The light will not update. [Based on an attached .blend file] [Persistent Data Object Light Bug.blend](https://archive.blender.org/developer/F9935117/Persistent_Data_Object_Light_Bug.blend) Thanks!

Added subscriber: @catblue44

Added subscriber: @catblue44
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

This is probably very much related with #87295 (Persistent Data ignores animation) (if not technically a duplicate).
Also caused by 9676a1f61e it seems.

Can confirm. This is probably very much related with #87295 (Persistent Data ignores animation) (if not technically a duplicate). Also caused by 9676a1f61e it seems.
Philipp Oeser changed title from Cycles Persistent Data Light Objects do not update in render to Persistent Data ignores light objects property changes 2021-04-16 10:30:50 +02:00

This issue was referenced by cedd8b8c56

This issue was referenced by cedd8b8c56b944ffdabadc4339d2d1e5c6651dd6

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-04-19 20:09:30 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87535
No description provided.